1. 添加显示解析内容的页面和自定义输入的页面及布局，字符串引用资源等。 2. 封装MarkDownView，用于显示MarkDown内容。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="io.github.agaghd.markdownview.MainActivity">
+    tools:context="io.github.agaghd.markdownview.activities.MainActivity">
 
     <Button
         android:layout_width="match_parent"
